adding tab icon

--- a/SearchResults.html
+++ b/SearchResults.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search | Croma Electronics | Online Electronics Shopping | Buy...</title>
-    <!-- <link rel="icon" href="https://www.croma.com/assets/croma-icon-192.png"/> -->
+    <link rel="icon" href="https://www.croma.com/assets/croma-icon-192.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>      
 </head>
 <style>
