--- a/product.html
+++ b/product.html
@@ -1120,8 +1120,8 @@ margin-left:2%;
         <!-- Add to cart button container -->
         
             <div class="sp-add-to-cart-btn">
-                <button class="sp-add-to-cart">ADD TO CART</button>
-                <button class="sp-buy-now">BUY NOW</button>
+                <button class="sp-add-to-cart" onclick="addproduct()">ADD TO CART</button>
+                <a href="checkoutimproved.html"><button class="sp-buy-now">BUY NOW</button></a>
             </div>
             </div>
     </div>
@@ -1925,6 +1925,24 @@ margin-left:2%;
         }).join('');
 
         output.innerHTML = matchingProduct;
+    }
+
+    function addproduct(){
+
+    
+        if(localStorage.getItem("Cromacart")==null)
+        {
+            localStorage.setItem("Cromacart",JSON.stringify([]));
+        }
+
+        let arr = JSON.parse(localStorage.getItem("Cromacart"));
+
+        arr.push(requested_product);
+
+        alert(`${requested_product.Category} is added to your cart`);    
+
+        localStorage.setItem("Cromacart",JSON.stringify(arr));
+
     }
   </script>
 
