--- a/product.html
+++ b/product.html
@@ -1003,7 +1003,7 @@ margin-left:2%;
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
     <div style="margin-bottom:20px">
-   <a href="#home" style="margin-top:2px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
+   <a href="index.html" style="margin-top:2px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
    <a href="#menu"><span class="material-icons" >
  menu
  </span></a>
@@ -1014,7 +1014,7 @@ margin-left:2%;
    <a href="#menu" style="margin-left:-50px">Orders</a>
    <a href="#menu" style="margin-left:-2%">Sign In</a>
    <a href="#menu" style="margin-left:-2%">Pincode</a>
-    <a href="#menu" style="margin-left:-2.5%"><span class="material-icons">
+    <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
  shopping_cart</span></a>
 
  <div id = "output"></div>
