--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -438,7 +438,7 @@ margin-left:2%;
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
     <div style="margin-bottom:20px">
-   <a href="#home" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
+   <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
    <a href="#menu"><span class="material-icons" >
  menu
  </span></a>
