--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -290,7 +290,7 @@ margin-left:1%;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  height:14%;
+  height:9%;
   z-index:1;
 }
 
@@ -300,12 +300,15 @@ margin-left:1%;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 18px;
   text-decoration: none;
 margin-top:1%;
-margin-right:1%;
-
+margin-right:3%;
 }
+
+.navbar span{
+        margin-top: -7px;
+    }
 
 /* Change background on mouse-over */
 .navbar a:hover {
@@ -423,7 +426,9 @@ margin-left:2%;
   cursor: pointer;
 }
 
-
+.bottomcontainer_payment{
+  margin-top: 75px;
+}
 
 
 
@@ -437,32 +442,26 @@ margin-left:2%;
 <body>
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
-    <div style="margin-bottom:20px">
-   <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
-   <a href="#menu"><span class="material-icons" >
- menu
- </span></a>
- <a style="margin-left:-30px">Menu</a>
-   <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
- </a>
- <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-9px;margin-left:-95px"/></a>
-   <a href="#menu" style="margin-left:-50px">Orders</a>
-   <a href="#menu" style="margin-left:-2%">Sign In</a>
-   <a href="#menu" style="margin-left:-2%">Pincode</a>
-    <a href="#menu" style="margin-left:-2.5%"><span class="material-icons">
- shopping_cart</span></a>
+  <div style="margin-top:-7px;font-size: 20px;">
+ <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
+ <a href="#menu"><span class="material-icons" >
+menu
+</span></a>
+<a style="margin-left:-68px; margin-top : 7px;">Menu</a>
+ <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;font-size: 20px;"></input>
+</a>
+<a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px"/></a>
+ <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
+ <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
+ <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
+  <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
+shopping_cart</span></a>
    
    </div>
  </div>
  <!--end of header-->
 
  <!--beginning of cart-->
- <div class="ccard" id="uppercart" style="margin:1.5%">
-    <div style="font-size:20px;margin-left:30%;margin-right:7%"><h3>Your Cart  [3 Items ]   Price    </h3></div>
-    <div><button style="background-color:orange;border-radius:50px;height:35px;width:120px;">Checkout</button></div>
-
-</div>
-
 <div class="bottomcontainer_payment">
 
 <div id="itemlist_p" style=" width:70%;">
@@ -514,8 +513,8 @@ margin-left:2%;
 
 </div>
 
-<div class="payment-right" style="margin-right:5%;width:25%">
-    <div class="payment options ccard" style="margin-left:15px;padding:15px;">
+<div class="payment-right" style="margin-right:5%;width:25%;margin-top: 15px;">
+    <div class="payment options ccard" style="margin-left:15px;padding:15px; width: 386px;">
 
         <h3>Delivery options for your area</h3>
         <input type="radio" name="del">Standard Delivery </input></br></br>
@@ -573,6 +572,9 @@ margin-left:2%;
                           <script>
                                 function qwe(){
                                     alert("Transaction Completed successfully");
+                                    setTimeout(() => {
+                                      window.location.href = "index.html";
+                                    }, 2000);
                                 }
 
                           </script>
