--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ margin-left:1%;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  height:14%;
+  height:9%;
   z-index:1;
 }
 
@@ -262,12 +262,15 @@ margin-left:1%;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 18px;
   text-decoration: none;
 margin-top:1%;
-margin-right:1%;
-
+margin-right:3%;
 }
+
+.navbar span{
+        margin-top: -7px;
+    }
 
 /* Change background on mouse-over */
 /* .navbar a:hover {
@@ -463,11 +466,11 @@ margin-left:4%;
 /* Search bar */
 
 #output{
-        width: 454px;
-        margin-left: 339px;
+        width: 461px;
+        margin-left: 430px;
         background-color: white;
         border-radius: 5px;
-        margin-top: 40px;
+        margin-top: 60px;
         max-height: 300px;
         overflow-y: scroll;
         z-index: 1;
@@ -490,14 +493,15 @@ margin-left:4%;
     }
 
     #searchbar {
-        border-radius: 0.5rem;
-        font-size: 20px;
-        background-color: white;
         height:35px;
         width:450px;
         border-radius:5px;
         border:0px;
         padding-left:20px;
+        border-radius: 0.5rem;
+        font-size: 20px;
+        padding-left: 50px;
+        background-color: white;
     }
 
 /* End of Search bar */
@@ -554,18 +558,18 @@ margin-left:4%;
 <body>
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
-    <div style="margin-bottom:20px">
+    <div style="margin-top:-7px;font-size: 20px;">
    <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
    <a href="#menu"><span class="material-icons" >
  menu
  </span></a>
- <a style="margin-left:-30px">Menu</a>
+ <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
    <a style="margin-right:0px;margin-top:2px"><input type="text" id = "searchbar" placeholder="What are you looking for ?"></input>
  </a>
- <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-9px;margin-left:-95px"/></a>
-   <a href="#menu" style="margin-left:-50px">Orders</a>
-   <a href="#menu" style="margin-left:-2%"><button id="myBtn" style="color:white;cursor:pointer;background-color:transparent;border:0;">Sign In</button></a>
-   <a href="#menu" style="margin-left:-2%">Pincode</a>
+ <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-13px;margin-left:-95px"/></a>
+   <a href="#menu" style="margin-left:-50px; margin-top : 7px;">Orders</a>
+   <a href="#menu" style="margin-left:-2%;margin-top : 7px;"><button id="myBtn" style="color:white;cursor:pointer;background-color:transparent;border:0; font-size: 20px;">Sign In</button></a>
+   <a href="#menu" style="margin-left:-2%;margin-top : 7px;">Pincode</a>
     <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
  shopping_cart</span></a>   
    </div>
