--- a/product.html
+++ b/product.html
@@ -251,7 +251,7 @@ margin-left:1%;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  height:14%;
+  height:9%;
   z-index:1;
 }
 
@@ -613,6 +613,7 @@ margin-left:2%;
         #sp-image{
             width: 100%;
             height: auto;
+            margin-top: -100px;
         }
 
         .sp-lens{
@@ -954,8 +955,8 @@ margin-left:2%;
         color: grey;
     }
     #output{
-        width: 454px;
-        margin-left: 29.5%;
+        width: 461px;
+        margin-left: 430px;
         background-color: white;
         border-radius: 5px;
         margin-top: 60px;
@@ -986,7 +987,9 @@ margin-left:2%;
         padding-left: 50px;
         background-color: white;
     }
-
+    .navbar span{
+        margin-top: -7px;
+    }
 
 </style>
 </head>
@@ -1002,18 +1005,18 @@ margin-left:2%;
 
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
-    <div style="margin-bottom:20px">
-   <a href="index.html" style="margin-top:2px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
+    <div style="margin-top:-7px;font-size: 20px;">
+   <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
    <a href="#menu"><span class="material-icons" >
  menu
  </span></a>
- <a style="margin-left:-30px">Menu</a>
-   <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?"  id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
+ <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
+   <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
  </a>
- <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:34.5px;margin-top:-11px;margin-left:-95px; border-radius: 3px;"/></a>
-   <a href="#menu" style="margin-left:-50px">Orders</a>
-   <a href="#menu" style="margin-left:-2%">Sign In</a>
-   <a href="#menu" style="margin-left:-2%">Pincode</a>
+ <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px"/></a>
+   <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
+   <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
+   <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
     <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
  shopping_cart</span></a>
 
@@ -1589,69 +1592,69 @@ margin-left:2%;
   <script>
     //   image zoomer script
 
-    const container = document.querySelector(".sp-container");
-        const image = document.querySelector("#sp-image");
-        const lens = document.querySelector(".sp-lens");
-        const result = document.querySelector(".sp-result");
+    // const container = document.querySelector(".sp-container");
+    //     const image = document.querySelector("#sp-image");
+    //     const lens = document.querySelector(".sp-lens");
+    //     const result = document.querySelector(".sp-result");
 
 
-        container.addEventListener("mouseenter", enableResult);
-        container.addEventListener("mouseleave", disableResult);
+    //     container.addEventListener("mouseenter", enableResult);
+    //     container.addEventListener("mouseleave", disableResult);
 
-        function enableResult(){
-            result.style.opacity = "1";
-        }
+    //     function enableResult(){
+    //         result.style.opacity = "1";
+    //     }
 
-        function disableResult(){
-            result.style.opacity = "0";
-        }
+    //     function disableResult(){
+    //         result.style.opacity = "0";
+    //     }
 
-        const containerRect = container.getBoundingClientRect();
-        const imageRect = image.getBoundingClientRect();
-        const lensRect = lens.getBoundingClientRect();
-        const resultRect = result.getBoundingClientRect();
+    //     const containerRect = container.getBoundingClientRect();
+    //     const imageRect = image.getBoundingClientRect();
+    //     const lensRect = lens.getBoundingClientRect();
+    //     const resultRect = result.getBoundingClientRect();
 
-        container.addEventListener("mousemove", zoomImage);
-        result.style.backgroundImage =  "url('" + image.src + "')";
+    //     container.addEventListener("mousemove", zoomImage);
+    //     result.style.backgroundImage =  "url('" + image.src + "')";
 
-        function zoomImage(e){
-            console.log("zoom: ", e.clientX, e.clientY);
-            const { x, y } = getMousePos(e);
-            console.log(x, y);
-            lens.style.left = x + "px";
-            lens.style.top = y + "px";
+    //     function zoomImage(e){
+    //         console.log("zoom: ", e.clientX, e.clientY);
+    //         const { x, y } = getMousePos(e);
+    //         console.log(x, y);
+    //         lens.style.left = x + "px";
+    //         lens.style.top = y + "px";
 
-            let fx = resultRect.width / lensRect.width;
-            let fy = resultRect.height / lensRect.height;
-            result.style.backgroundSize = (imageRect.width * fx) + "px" +  (imageRect.height * fy) + "px";
-            result.style.backgroundPosition = "-" + (x * fx) + "px -" + (y * fy) + "px";
-        }
+    //         let fx = resultRect.width / lensRect.width;
+    //         let fy = resultRect.height / lensRect.height;
+    //         result.style.backgroundSize = (imageRect.width * fx) + "px" +  (imageRect.height * fy) + "px";
+    //         result.style.backgroundPosition = "-" + (x * fx) + "px -" + (y * fy) + "px";
+    //     }
 
-        function getMousePos(e){
-            let x = e.clientX - containerRect.left - (lensRect.width/2);
-            let y = e.clientY - containerRect.top - (lensRect.height/2);
+    //     function getMousePos(e){
+    //         let x = e.clientX - containerRect.left - (lensRect.width/2);
+    //         let y = e.clientY - containerRect.top - (lensRect.height/2);
 
-            let minX = 0;
-            let minY = 0;
-            let maxX = containerRect.width - lensRect.width;
-            let maxY = containerRect.height - lensRect.height;
+    //         let minX = 0;
+    //         let minY = 0;
+    //         let maxX = containerRect.width - lensRect.width;
+    //         let maxY = containerRect.height - lensRect.height;
 
-            if(x <= minX){
-                x = minX;
-            }
-            else if(x >= maxX) {
-                x = maxX;
-            }
+    //         if(x <= minX){
+    //             x = minX;
+    //         }
+    //         else if(x >= maxX) {
+    //             x = maxX;
+    //         }
 
-            if(y <= minY){
-                y = minY;
-            }
-            else if(y >= maxY) {
-                y = maxY;
-            }
+    //         if(y <= minY){
+    //             y = minY;
+    //         }
+    //         else if(y >= maxY) {
+    //             y = maxY;
+    //         }
 
-            return { x, y };
-        }
+    //         return { x, y };
+    //     }
             
         // script for first carousell
 
