--- a/Wishlist.html
+++ b/Wishlist.html
@@ -260,10 +260,10 @@ margin-left:1%;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 18px;
   text-decoration: none;
-margin-top:1%;
-margin-right:1%;
+    margin-top:1%;
+    margin-right:3%;
 
 }
 
@@ -324,15 +324,15 @@ transition:3s;
 margin-top:9%;
 }
 #output{
-        width: 451px;
-        margin-left: 22.5%;
-        background-color: white;
-        border-radius: 5px;
-        margin-top: 55px;
-        max-height: 300px;
-        overflow-y: scroll;
-        z-index: 1;
-        position: fixed;
+    width: 461px;
+    margin-left: 417px;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 60px;
+    max-height: 300px;
+    overflow-y: scroll;
+    z-index: 1;
+    position: fixed;
     }
     #output::-webkit-scrollbar {
     display: none;
@@ -349,7 +349,9 @@ margin-top:9%;
         text-decoration: inherit;
 
     }
-
+    .navbar span{
+    margin-top: -7px;
+    }
     #searchbar {
         border-radius: 0.5rem;
         font-size: 20px;
@@ -495,18 +497,18 @@ margin-left:2%;
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- start of header-->
 <div class="navbar" style="text-align:center">
-    <div style="margin-bottom:20px">
+    <div style="margin-top:-7px;font-size: 20px;">
    <a href="index.html" style="margin-top:-1.1px;margin-left:7.8px"><img src="https://i.postimg.cc/Wb8fn0cT/Screenshot-103.jpg" style="width:143.5px; height:44.5px;"/></a>
    <a href="#menu"><span class="material-icons" >
  menu
  </span></a>
- <a style="margin-left:-30px">Menu</a>
+ <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
    <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
  </a>
  <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-13px;margin-left:-95px"/></a>
-   <a href="#menu" style="margin-left:-50px">Orders</a>
-   <a href="#menu" style="margin-left:-2%">Sign In</a>
-   <a href="#menu" style="margin-left:-2%">Pincode</a>
+   <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
+   <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
+   <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
     <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
  shopping_cart</span></a>
 
