--- a/product.html
+++ b/product.html
@@ -1694,7 +1694,7 @@ margin-left:2%;
             }
         }
 
-        str += `<a href = "./product.html#name=${element.Name}"><div class="sps-boxforsinglecard">
+        str += `<a href="javascript:void(0)" onclick="window.location='./product.html#name=${element.Name}'; location.reload();"><div class="sps-boxforsinglecard">
                     <div class="sps-cardsinglecard">
                                          <div id="sps-image1" style="width:100%;background-image: url(${element.Image});">
                                             <span class="material-icons" style="color:red;margin-right:3%;margin-top:3%;">favorite_border </span>
@@ -1751,7 +1751,7 @@ margin-left:2%;
             }
         }
 
-        st += `<a href = "./product.html#name=${element.Name}"><div class="sp-boxforsinglecard">
+        st += `<a href="javascript:void(0)" onclick="window.location='./product.html#name=${element.Name}'; location.reload();"><div class="sp-boxforsinglecard">
                     <div class="sp-cardsinglecard">
                                          <div id="sp-image1" style="width:90%;background-image: url(${element.Image}); display:inline-block">
                                             <span class="material-icons" style="color:red;margin-right:3%;margin-top:3%;margin-left:3% display:inline-block">favorite_border </span>
