--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -632,7 +632,7 @@ shopping_cart</span></a>
         string += `<div class="item ccard">
       
       <div class="img_p">
-              <img src=${element.Image}/>
+              <img src=${element.Image}?/>
       </div>
       
       <div class="details_p">
