--- a/Wishlist.html
+++ b/Wishlist.html
@@ -627,7 +627,7 @@ margin-left:2%;
             }
             else {
                 let output = document.getElementById("output")
-                output.innerHTML = '';
+                output.innerHTML = `<p style = "margin : 20px auto">No search results found</p>`;
             }
         }
         else {
