--- a/index.html
+++ b/index.html
@@ -1681,7 +1681,7 @@ let data = [
             }
             else {
                 let output = document.getElementById("output")
-                output.innerHTML = '';
+                output.innerHTML = `<p style = "margin : 20px auto">No search results found</p>`;
             }
         }
         else {
