--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -585,6 +585,9 @@ menu
                           <input type="password"></input>
                           </br>
                           </br>
+                          <script src="https://www.wpromotions.eu/confetti.min.js"></script>
+                          <script>confetti.start()</script>
+                          <script>setTimeout(function(){confetti.stop();},2000)</script> 
                           <button onclick="qwe()">Complete Transaction</button>
                   </div>
 
@@ -811,17 +814,6 @@ menu
         output.innerHTML = matchingProduct;
     }
 </script>
-
-
-
-
-
-
-
-
-
-
-
 
 
  <!--endofpopup-->
