--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CheckoutImproved</title>
+  <title>Checkout</title>
+  <link rel="icon" href="https://www.croma.com/assets/croma-icon-192.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
