--- a/SearchResults.html
+++ b/SearchResults.html
@@ -968,6 +968,7 @@ function showserproducts(d)
 
         buynow.onclick = function(){
 
+            addproduct(element);
            window.location.href = "checkoutimproved.html";
 
         }
