--- a/product.html
+++ b/product.html
@@ -1119,7 +1119,7 @@ margin-left:2%;
         
             <div class="sp-add-to-cart-btn">
                 <button class="sp-add-to-cart" onclick="addproduct()">ADD TO CART</button>
-                <a href="checkoutimproved.html"><button class="sp-buy-now">BUY NOW</button></a>
+                <a href="checkoutimproved.html" onclick="addproduct()"><button class="sp-buy-now">BUY NOW</button></a>
             </div>
             </div>
     </div>
