--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -586,6 +586,7 @@ menu
                           <input type="password"></input>
                           </br>
                           </br>
+                          <button onclick="qwe()">Checkout</button>
                   </div>
 
 
