--- a/product.html
+++ b/product.html
@@ -1093,7 +1093,7 @@ margin-left:2%;
             </div>
 
             <!-- ZIP Protection Plan -->
-            <span class="sp-shield-logo"><img src="shield-image.png"></span>
+            <span class="sp-shield-logo"><img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/f_auto,q_auto,d_Croma%20Assets:no-product-image.jpg/Croma%20Assets/UI%20Assets/shield-2.svg/mxw_2048,f_auto"></span>
             <span class="sp-zip-text">ZIP Protection Plan</span>
             <hr>
             
@@ -1101,17 +1101,17 @@ margin-left:2%;
             <label>
                 <span class="sp-radio-button"> <input type="radio"></span>
                     <span class="sp-warranty-period-text">1 Year Extended Warranty-Onsitego</span>
-                    <span><a href="#"><img src="info-icon.png" class="sp-info-icon"></a></span>
+                    <span><a href="#"><img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/f_auto,q_auto,d_Croma%20Assets:no-product-image.jpg/Croma%20Assets/UI%20Assets/info.svg/mxw_2048,f_auto" class="sp-info-icon"></a></span>
                 </label>
             <label>
                 <span class="sp-radio-button"> <input type="radio"></span>
                     <span class="sp-warranty-period-text">2 Year Extended Warranty-Onsitego</span>
-                    <span><a href="#"><img src="info-icon.png" class="sp-info-icon"></a></span>
+                    <span><a href="#"><img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/f_auto,q_auto,d_Croma%20Assets:no-product-image.jpg/Croma%20Assets/UI%20Assets/info.svg/mxw_2048,f_auto" class="sp-info-icon"></a></span>
                 </label>
             <label>
                     <span class="sp-radio-button"> <input type="radio"></span>
                     <span class="sp-warranty-period-text">3 Year Extended Warranty-Onsitego</span>
-                    <span><a href="#"><img src="info-icon.png" class="sp-info-icon"></a></span>
+                    <span><a href="#"><img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/f_auto,q_auto,d_Croma%20Assets:no-product-image.jpg/Croma%20Assets/UI%20Assets/info.svg/mxw_2048,f_auto" class="sp-info-icon"></a></span>
             </label>    
             </div>
         
