--- a/product.html
+++ b/product.html
@@ -1074,10 +1074,10 @@ margin-left:2%;
             <!-- bank offer text -->
             <span class="sp-bank-offer-text" style="margin-left: 6%;">No cost EMI upto 12 months tenure. T&C apply.</span><a href="#" style="font-size: 75%;">Learn more</a>
             <hr class="sp-dashed">
-            <span class="sp-icici"><img src="icici-logo.png" class="sp-icici-logo"></span>
+            <span class="sp-icici"><img src="https://www.icicibank.com/favicon.ico" class="sp-icici-logo"></span>
             <span class="sp-bank-offer-text" style="margin-left: 1%;">Rs 500 discount on Tx of 10,000 & above with ICICI Credit Card T&C Apply.</span><a href="#" style="font-size: 75%;">Learn more</a>
             <hr class="sp-dashed">
-            <span class="icici"><img src="icici-logo.png" class="sp-icici-logo"></span>
+            <span class="icici"><img src="https://www.icicibank.com/favicon.ico" class="sp-icici-logo"></span>
             <span class="sp-bank-offer-text" style="margin-left: 1%;">Rs 1000 discount on Tx of 15,000 & above with ICICI Credit cards T&C Apply.</span><a href="#" style="font-size: 75%;">Learn more</a>
             <hr class="sp-dashed">
 
