--- a/index.html
+++ b/index.html
@@ -504,6 +504,9 @@ margin-left:2%;
         padding-left: 50px;
         background-color: white;
     }
+    #searchbar:focus{
+        outline-width: 0;
+    }
 
 /* End of Search bar */
 
@@ -587,7 +590,7 @@ a{
  <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
    <a style="margin-right:0px;margin-top:2px"><input type="text" id = "searchbar" placeholder="What are you looking for ?"></input>
  </a>
- <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-95px"/></a>
+ <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-95px; border-radius: 5px; border-top-left-radius:0px; border-bottom-left-radius:0px"/></a>
    <a href="#menu" style="margin-left:-50px; margin-top : 7px;">Orders</a>
    <a href="#menu" style="margin-left:-2%;margin-top : 7px;"><button id="myBtn" style="color:white;cursor:pointer;background-color:transparent;border:0; font-size: 20px;">Sign In</button></a>
    <a href="#menu" style="margin-left:-2%;margin-top : 7px;">Pincode</a>
