--- a/product.html
+++ b/product.html
@@ -985,6 +985,9 @@ margin-left:2%;
     .navbar span{
         margin-top: -7px;
     }
+    #searchbar:focus{
+        outline-width: 0;
+    }
 
 </style>
 </head>
@@ -1008,7 +1011,7 @@ margin-left:2%;
  <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
    <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
  </a>
- <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px"/></a>
+ <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px;  border-radius: 5px; border-top-left-radius:0px; border-bottom-left-radius:0px"/></a>
    <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
    <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
    <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
