--- a/SearchResults.html
+++ b/SearchResults.html
@@ -563,6 +563,9 @@ margin-bottom:15px;
 margin-left:2%;
 
 }
+#searchbar:focus{
+        outline-width: 0;
+    }
 </style>
 </head>
 <body onload="showserproducts(d)">
@@ -581,7 +584,7 @@ margin-left:2%;
  menu
  </span></a>
  <a style="margin-left:-68px; margin-top : 7px;">Menu</a>
-   <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;"></input>
+   <a style="margin-right:0px;margin-top:2px"><input type="text" placeholder="What are you looking for ?" id = "searchbar" style="height:35px;width:450px;border-radius:5px;border:0px;padding-left:20px;border-radius: 5px; border-top-left-radius:0px; border-bottom-left-radius:0px"></input>
  </a>
  <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px"/></a>
    <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
