--- a/index.html
+++ b/index.html
@@ -2563,7 +2563,8 @@ let data = [
     
     // When the user clicks on the button, open the modal
     btn.onclick = function() {
-      modal.style.display = "block";
+	    if(!fl){
+      modal.style.display = "block";}
     }
     
     // When the user clicks on <span> (x), close the modal
