--- a/index.html
+++ b/index.html
@@ -2563,6 +2563,7 @@ let data = [
     
     // When the user clicks on the button, open the modal
     btn.onclick = function() {
+	    console.log(fl);
 	    if(!fl){
       modal.style.display = "block";}
     }
