--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -558,7 +558,7 @@ menu
         <label id="delivery"></label></br></br>
     </hr>
         <label id="total"></label></br></br>
-        <button id="myBtn" style="color:teal;padding:5px;border:0px;height:25px;">Checkout</button>
+        <button id="myBtn1" style="color:teal;padding:5px;border:0px;height:25px;">Checkout</button>
     </div>
 </div>
 </div>
@@ -617,7 +617,7 @@ menu
   var modal = document.getElementById("myModal");
     
   // Get the button that opens the modal
-  var btn = document.getElementById("myBtn");
+  var btn = document.getElementById("myBtn1");
   
   // Get the <span> element that closes the modal
   var span = document.getElementsByClassName("close")[0];
