--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -558,7 +558,7 @@ menu
         <label id="delivery"></label></br></br>
     </hr>
         <label id="total"></label></br></br>
-        <button id="myBtn1" style="color:teal;padding:5px;border:0px;height:25px;">Checkout</button>
+        <button id="myBtn1" style="color:teal;padding:5px;border:0px;height:25px;cursor:pointer">Checkout</button>
     </div>
 </div>
 </div>
