--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -522,7 +522,7 @@ menu
 </a>
 <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px; border-radius: 5px; border-top-left-radius:0px; border-bottom-left-radius:0px"/></a>
  <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
- <a href="#menu" id="myBtn" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
+ <a href="#menu" id="myBtn1" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
  <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
   <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
     shopping_cart</span></a>
@@ -606,7 +606,7 @@ menu
 
 <script>
 	var fl= localStorage.getItem("flag");
-	var tempb=document.getElementById("myBtn");
+	var tempb=document.getElementById("myBtn1");
 	if(!fl)
 	{
 	 tempb.textContent="SignIn";
@@ -614,6 +614,10 @@ menu
 	}
 	else
 	tempb.textContent="MyWishlist";
+  if(tempb.textContent=='MyWishlist')
+    tempb.onclick = function(){
+        window.location.href = "Wishlist.html";
+    }
   var modal = document.getElementById("myModal");
     
   // Get the button that opens the modal
