--- a/product.html
+++ b/product.html
@@ -1309,6 +1309,10 @@ margin-left:2%;
 	}
 	else
 	tempb.textContent="MyWishlist";
+    if(tempb.textContent=='MyWishlist')
+    tempb.onclick = function(){
+        window.location.href = "Wishlist.html";
+    }
         // script for first carousell
 
         let k1=0;
