--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -522,7 +522,7 @@ menu
 </a>
 <a><img src="https://i.postimg.cc/SQnPQc51/Screenshot-108.jpg" style="height:35px;margin-top:-14px;margin-left:-106px; border-radius: 5px; border-top-left-radius:0px; border-bottom-left-radius:0px"/></a>
  <a href="#menu" style="margin-left:-50px ; margin-top : 7px;">Orders</a>
- <a href="#menu" id="myBtn" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
+ <a href="#menu" id="myBtn1" style="margin-left:-2%; margin-top : 7px;">Sign In</a>
  <a href="#menu" style="margin-left:-2%; margin-top : 7px;">Pincode</a>
   <a href="checkoutimproved.html" style="margin-left:-2.5%"><span class="material-icons">
     shopping_cart</span></a>
@@ -558,7 +558,7 @@ menu
         <label id="delivery"></label></br></br>
     </hr>
         <label id="total"></label></br></br>
-        <button id="myBtn1" style="color:teal;padding:5px;border:0px;height:25px;cursor:pointer">Checkout</button>
+        <button id="myBtn" style="color:teal;padding:5px;border:0px;height:25px;cursor:pointer">Checkout</button>
     </div>
 </div>
 </div>
@@ -621,7 +621,7 @@ menu
   var modal = document.getElementById("myModal");
     
   // Get the button that opens the modal
-  var btn = document.getElementById("myBtn1");
+  var btn = document.getElementById("myBtn");
   
   // Get the <span> element that closes the modal
   var span = document.getElementsByClassName("close")[0];
