--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -625,6 +625,7 @@ menu
 	
 	function rem(){
 		localStorage.removeItem("flag");
+		location.reload();
 	}
   var modal = document.getElementById("myModal");
     
