--- a/checkoutimproved.html
+++ b/checkoutimproved.html
@@ -558,7 +558,7 @@ menu
         <label id="delivery"></label></br></br>
     </hr>
         <label id="total"></label></br></br>
-        <button id="myBtn" style="color:teal;padding:5px;border:0px;width="150px";height:25px;cursor:pointer">Checkout</button>
+        <button id="myBtn" style="color:teal;padding:5px;border:0px;width:150px;height:25px;cursor:pointer">Checkout</button>
         
       
     </div>
